enable swagger add filter range fields clean code